--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -115,8 +115,11 @@ $third: #cd000c !important;
   position: relative;
   bottom: -150px;
   width: 75%;
-  background: #fafafa;
-  padding: 30px;
+  background: #ffffff;
+  padding: 70px 30px 30px;
+  @media only screen and (max-width: 400px) {
+    padding: 0px 30px 30px;
+  }
   box-shadow: 0px 20px 80px 0px rgba(153, 153, 153, 0.3);
 }
 
